--- a/main.html
+++ b/main.html
@@ -8,31 +8,31 @@
 
 <body>
 	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
-		<nav>
-        <ul>
-            <li><a href="#link1">Link 1</a></li>
-            <li><a href="#link2">Link 2</a></li>
-            <li><a href="#link3">Link 3</a></li>
+    <nav>
+        <ul style="list-style: none;">
+            <li><a href="https://open.spotify.com/">Spotify</a></li>
+            <li><a href="https://gaana.com/">Gaana</a></li>
+            <li><a href="https://www.jiosaavn.com/">Jiosaavn</a></li>
         </ul>
     </nav>
 
-    <h2>3 random audios</h2>
-    
-    <audio controls>
-        <source src="http://commondatastorage.googleapis.com/codeskulptor-demos/DDR_assets/Kangaroo_MusiQue_-_The_Neverwritten_Role_Playing_Game.mp3" type="audio/mpeg">
-        Your browser does not support the audio element.
-    </audio>
+    <section>
+        <h2>3 random audios</h2>
+        
+        <audio type="audio/mpeg" controls src="http://commondatastorage.googleapis.com/codeskulptor-demos/DDR_assets/Kangaroo_MusiQue_-_The_Neverwritten_Role_Playing_Game.mp3">
+            Audio 1
+        </audio>
 
-    <audio controls>
-        <source src="http://commondatastorage.googleapis.com/codeskulptor-assets/Epoq-Lepidoptera.ogg" type="audio/ogg">
-        Your browser does not support the audio element.
-    </audio>
+        <audio type="audio/ogg" controls src="http://commondatastorage.googleapis.com/codeskulptor-assets/Epoq-Lepidoptera.ogg">
+            Audio 2
+        </audio>
 
-    <audio controls>
-        <source src="http://codeskulptor-demos.commondatastorage.googleapis.com/pang/paza-moduless.mp3" type="audio/mpeg">
-        Your browser does not support the audio element.
-    </audio>
+        <audio type="audio/mpeg" controls src="http://codeskulptor-demos.commondatastorage.googleapis.com/pang/paza-moduless.mp3">
+            Audio 3
+        </audio>
+    </section>
+
+    <script type="text/javascript" src="./script.js">
 </script>
 
 </body>
